--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2"
@@ -25,5 +26,18 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
-  }
+  },
+  "description": "Este repositorio contiene la migración del **Prototipo MonteVerde** a **React**.  \r El objetivo es desarrollar una plataforma web de gestión académica para docentes, estudiantes y familias, con navegación fluida, consumo de APIs y seguridad mediante JWT en etapas futuras.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/guiooscar3103/prototipo-monteverde-react.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/guiooscar3103/prototipo-monteverde-react/issues"
+  },
+  "homepage": "https://github.com/guiooscar3103/prototipo-monteverde-react#readme"
 }
